--- a/src/app/app-list/app-list.component.html
+++ b/src/app/app-list/app-list.component.html
@@ -1,5 +1,10 @@
-<div class="app-list">
-    <div *ngFor="let app of apps" class="app-item" (click)="selectApp(app)">
-        {{ app.name }}
+<div class="app-list-container">
+    <div class="app-list">
+        <div *ngFor="let app of apps" 
+             class="app-item" 
+             [class.selected]="isSelected(app)" 
+             (click)="selectApp(app)">
+            {{ app.name }}
+        </div>
     </div>
 </div>
