--- a/src/app/app-details/app-details.component.css
+++ b/src/app/app-details/app-details.component.css
@@ -1,9 +1,7 @@
 .app-details {
-    border: 1px solid #e0e0e0;
-    border-radius: 10px;
     padding: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* background-color: #ffffff; */
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     width: 100%; /* Garante que os detalhes ocupem toda a largura disponível */
     height: 100%;
     box-sizing: border-box;
