--- a/src/app/app-list/app-list.component.css
+++ b/src/app/app-list/app-list.component.css
@@ -4,11 +4,11 @@
     align-items: center; /* Centraliza verticalmente */
     height: 100%;
     width: 100%;
-    background-color: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra para um visual mais agradável */
+    /* background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     box-sizing: border-box;
-    border: 1px solid #e0e0e0; /* Adiciona a borda visível */
-    border-radius: 10px;
+    /* border: 1px solid #e0e0e0; /* Adiciona a borda visível */
+    /* border-radius: 10px; */
 }
 
 .app-list {
