--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 <div class="container">
-  <app-carousel></app-carousel>
+  <div class="content">
+    <app-carousel></app-carousel>
+  </div>
   <div class="content">
     <div class="app-list-container">
       <app-app-list (appSelected)="onAppSelected($event)"></app-app-list>
