--- a/src/app/app-list/app-list.component.html
+++ b/src/app/app-list/app-list.component.html
@@ -1,10 +1,10 @@
 <div class="app-list-container">
     <div class="app-list">
-        <div *ngFor="let app of appList" 
+        <div *ngFor="let item of items" 
              class="app-item" 
-             [class.selected]="isSelected(app)" 
-             (click)="selectApp(app)">
-            {{ app }}
+             [class.selected]="isSelected(item)" 
+             (click)="selectItem(item)">
+            {{ item }}
         </div>
     </div>
 </div>
