--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -2,8 +2,8 @@
     <div class="carousel-wrapper">
         <button class="carousel-nav left" (click)="scrollLeft()">‹</button>
         <div class="carousel">
-            <div *ngFor="let item of items; let i = index" class="carousel-item" [class.selected]="isSelected(i)"
-                (click)="selectItem(i)">
+            <div *ngFor="let item of items" class="carousel-item" [class.selected]="isSelected(item)"
+                (click)="selectItem(item)">
                 {{ item }}
             </div>
         </div>
